--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -1,3 +1,18 @@
 .swiper-custom-slider-holder {
     overflow: hidden;
+    .swiper-slide {
+        position: relative;
+        .bg-image {
+            position: absolute;
+            left: 0;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
 }
