--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -1,4 +1,16 @@
 .swiper-custom-slider-holder {
   overflow: hidden; }
+  .swiper-custom-slider-holder .swiper-slide {
+    position: relative; }
+    .swiper-custom-slider-holder .swiper-slide .bg-image {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0; }
+      .swiper-custom-slider-holder .swiper-slide .bg-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover; }
 
 /*# sourceMappingURL=custom-widget.css.map */
