--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -14,5 +14,8 @@
                 object-fit: cover;
             }
         }
+        .inner {
+            position: relative;
+        }
     }
 }
