--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -12,5 +12,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover; }
+    .swiper-custom-slider-holder .swiper-slide .inner {
+      position: relative; }
 
 /*# sourceMappingURL=custom-widget.css.map */
