--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -1,3 +1,6 @@
+:root {
+  --white-color: #fff; }
+
 .swiper-custom-slider-holder {
   overflow: hidden; }
   .swiper-custom-slider-holder .swiper-slide {
@@ -13,6 +16,13 @@
         height: 100%;
         object-fit: cover; }
     .swiper-custom-slider-holder .swiper-slide .inner {
-      position: relative; }
+      position: relative;
+      text-align: center;
+      padding-left: 10px;
+      padding-right: 10px;
+      max-width: 770px;
+      margin-left: auto;
+      margin-right: auto;
+      color: var(--white-color); }
 
 /*# sourceMappingURL=custom-widget.css.map */
