--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -4,7 +4,12 @@
 .swiper-custom-slider-holder {
   overflow: hidden; }
   .swiper-custom-slider-holder .swiper-slide {
-    position: relative; }
+    position: relative;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    min-height: 100vh;
+    align-items: center;
+    display: flex; }
     .swiper-custom-slider-holder .swiper-slide .bg-image {
       position: absolute;
       left: 0;
@@ -24,5 +29,7 @@
       margin-left: auto;
       margin-right: auto;
       color: var(--white-color); }
+      .swiper-custom-slider-holder .swiper-slide .inner h3 {
+        color: var(--white-color); }
 
 /*# sourceMappingURL=custom-widget.css.map */
