--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -5,6 +5,11 @@
     overflow: hidden;
     .swiper-slide {
         position: relative;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        min-height: 100vh;
+        align-items: center;
+        display: flex;
         .bg-image {
             position: absolute;
             left: 0;
@@ -26,6 +31,9 @@
             margin-left: auto;
             margin-right: auto;
             color: var(--white-color);
+            h3 {
+                color: var(--white-color);
+            }
         }
     }
 }
