--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -21,6 +21,15 @@
                 height: 100%;
                 object-fit: cover;
             }
+            &:before {
+                content: "";
+                background-color: rgba(0, 0, 0, 0.4);
+                position: absolute;
+                left: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+            }
         }
         .inner {
             position: relative;
