--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -20,6 +20,14 @@
         width: 100%;
         height: 100%;
         object-fit: cover; }
+      .swiper-custom-slider-holder .swiper-slide .bg-image:before {
+        content: "";
+        background-color: rgba(0, 0, 0, 0.4);
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0; }
     .swiper-custom-slider-holder .swiper-slide .inner {
       position: relative;
       text-align: center;
