--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -1,7 +1,7 @@
 :root {
   --white-color: #fff;
   --button-hover: #f7f4ef;
-  --primary-color: #5A6E7F; }
+  --primary-color: #5a6e7f; }
 
 .swiper-custom-slider-holder {
   overflow: hidden; }
@@ -39,6 +39,8 @@
       margin-left: auto;
       margin-right: auto;
       color: var(--white-color); }
+      .swiper-custom-slider-holder .swiper-slide .inner > div:not(:last-child) {
+        margin-bottom: 40px; }
       .swiper-custom-slider-holder .swiper-slide .inner h3 {
         color: var(--white-color); }
 
@@ -47,7 +49,8 @@
   background-color: #f7f4ef21;
   border: 2px solid var(--white-color);
   font-size: 18px;
-  letter-spacing: 0.32px; }
+  letter-spacing: 0.32px;
+  color: var(--white-color); }
   .button-custom.button-custom.button-custom a:hover {
     background-color: var(--button-hover);
     color: var(--primary-color); }
