--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -63,6 +63,7 @@
         font-size: 18px;
         letter-spacing: 0.32px;
         color: var(--white-color);
+        font-weight: bold;
         &:hover {
             background-color: var(--button-hover);
             color: var(--primary-color);
