--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -38,10 +38,11 @@
             text-align: center;
             padding-left: 10px;
             padding-right: 10px;
-            max-width: 770px;
+            max-width: 800px;
             margin-left: auto;
             margin-right: auto;
             color: var(--white-color);
+            font-size: 22px;
             > div {
                 &:not(:last-child) {
                     margin-bottom: 40px;
