--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -44,6 +44,10 @@
         margin-bottom: 40px; }
       .swiper-custom-slider-holder .swiper-slide .inner h3 {
         color: var(--white-color); }
+    .swiper-custom-slider-holder .swiper-slide .swiper-button-next {
+      content: "next" !important; }
+    .swiper-custom-slider-holder .swiper-slide .swiper-button-prev {
+      content: "prev" !important; }
 
 .button-custom.button-custom.button-custom a {
   border-radius: 0;
