--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -53,6 +53,12 @@
                 color: var(--white-color);
             }
         }
+        .swiper-button-next {
+            content: "next" !important;
+        }
+        .swiper-button-prev {
+            content: "prev" !important;
+        }
     }
 }
 
