--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -53,6 +53,9 @@
                 color: var(--white-color);
             }
         }
+        .swiper-button-next, .swiper-button-prev {
+            color: var(--white-color);
+        }
         .swiper-button-next {
             content: "next" !important;
         }
