--- a/assets/css/custom-widget.css
+++ b/assets/css/custom-widget.css
@@ -5,6 +5,12 @@
 
 .swiper-custom-slider-holder {
   overflow: hidden; }
+  .swiper-custom-slider-holder .swiper-button-next, .swiper-custom-slider-holder .swiper-button-prev {
+    color: var(--white-color); }
+  .swiper-custom-slider-holder .swiper-button-next {
+    content: "next" !important; }
+  .swiper-custom-slider-holder .swiper-button-prev {
+    content: "prev" !important; }
   .swiper-custom-slider-holder .swiper-slide {
     position: relative;
     padding-top: 100px;
@@ -44,12 +50,6 @@
         margin-bottom: 40px; }
       .swiper-custom-slider-holder .swiper-slide .inner h3 {
         color: var(--white-color); }
-    .swiper-custom-slider-holder .swiper-slide .swiper-button-next, .swiper-custom-slider-holder .swiper-slide .swiper-button-prev {
-      color: var(--white-color); }
-    .swiper-custom-slider-holder .swiper-slide .swiper-button-next {
-      content: "next" !important; }
-    .swiper-custom-slider-holder .swiper-slide .swiper-button-prev {
-      content: "prev" !important; }
 
 .button-custom.button-custom.button-custom a {
   border-radius: 0;
