--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -5,14 +5,19 @@
 }
 .swiper-custom-slider-holder {
     overflow: hidden;
-    .swiper-button-next, .swiper-button-prev {
+    .swiper-button-next,
+    .swiper-button-prev {
         color: var(--white-color);
     }
     .swiper-button-next {
-        content: "next" !important;
+        &:after {
+            content: "next" !important;
+        }
     }
     .swiper-button-prev {
-        content: "prev" !important;
+        &:after {
+            content: "prev" !important;
+        }
     }
     .swiper-slide {
         position: relative;
@@ -62,7 +67,6 @@
                 color: var(--white-color);
             }
         }
-      
     }
 }
 
