--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -83,5 +83,11 @@
             background-color: var(--button-hover);
             color: var(--primary-color);
         }
+        &:not(:hover) {
+            @media (max-width: 767px) {
+                background-color: #f7f4ef8c;
+                color: var(--white-color);
+            }
+        }
     }
 }
