--- a/assets/css/custom-widget.scss
+++ b/assets/css/custom-widget.scss
@@ -8,15 +8,27 @@
     .swiper-button-next,
     .swiper-button-prev {
         color: var(--white-color);
+        &:after {
+            @media (max-width: 767px) {
+                font-size: 30px;
+                color: var(--primary-color);
+            }
+        }
     }
     .swiper-button-next {
         &:after {
             content: "next" !important;
         }
+        @media (max-width: 767px) {
+            right: -45px !important;
+        }
     }
     .swiper-button-prev {
         &:after {
             content: "prev" !important;
+        }
+        @media (max-width: 767px) {
+            left: -45px !important;
         }
     }
     .swiper-slide {
